deployment-iota.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: iota-verifier-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iota-verifier-portal
  template:
    metadata:
      labels:
        app: iota-verifier-portal
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      containers:
        - name: ssikit-iota-verifier-portal
          image: waltid/ssikit-verifier-portal:iota
          ports:
            - containerPort: 80
              name: http-api
---
kind: Service
apiVersion: v1
metadata:
  name: iota-verifier-portal
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: iota-verifier-portal
---
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: walletkit
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - iota.walt-test.cloud
      secretName: wallet-iota-tls-secret
  rules:
    - host: iota.walt-test.cloud
      http:
        paths:
          - path: /verifier-api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: walletkit
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iota-verifier-portal
                port:
                  number: 80
